refactor: replace if with switch