@@ -59,24 +59,7 @@ public final class Prefs {
     private static final Map<String, PrefsKey> MIGRATION_MAP;
 
     static {
-        var map = new HashMap<String, PrefsKey>();
-        map.put("playinsertingnote", PrefsKey.PLAY_INSERTED_NOTE);
-        map.put("playInsertingNote", PrefsKey.PLAY_INSERTED_NOTE);
-        map.put("withrepeat", PrefsKey.PLAY_WITH_REPEATS);
-        map.put("strip-short-a", PrefsKey.STRIP_SHORT_A);
-        map.put("autosave-after-strip-short-a", PrefsKey.AUTO_SAVE_AFTER_STRIP_SHORT_A);
-        map.put("tipindex", PrefsKey.TIP_INDEX);
-        map.put("tempochange", PrefsKey.TEMPO_CHANGE_PERCENT);
-        map.put("dpi", PrefsKey.EXPORT_DPI);
-        map.put("showtip", PrefsKey.SHOW_TIPS);
-        map.put("playcontinuously", PrefsKey.LOOP_PLAYBACK);
-        map.put("control", PrefsKey.CONTROL);
-        map.put("imageexportfilter", PrefsKey.IMAGE_EXPORT_FILTER);
-        map.put("durationshortitude", PrefsKey.PLAYBACK_NOTE_DURATION);
-        map.put("instrument", PrefsKey.INSTRUMENT);
-        map.put("metric", PrefsKey.METRIC);
-        map.put("firstrun", PrefsKey.FIRST_RUN);
-        MIGRATION_MAP = Collections.unmodifiableMap(map);
+        MIGRATION_MAP = Map.ofEntries(Map.entry("playinsertingnote", PrefsKey.PLAY_INSERTED_NOTE), Map.entry("playInsertingNote", PrefsKey.PLAY_INSERTED_NOTE), Map.entry("withrepeat", PrefsKey.PLAY_WITH_REPEATS), Map.entry("strip-short-a", PrefsKey.STRIP_SHORT_A), Map.entry("autosave-after-strip-short-a", PrefsKey.AUTO_SAVE_AFTER_STRIP_SHORT_A), Map.entry("tipindex", PrefsKey.TIP_INDEX), Map.entry("tempochange", PrefsKey.TEMPO_CHANGE_PERCENT), Map.entry("dpi", PrefsKey.EXPORT_DPI), Map.entry("showtip", PrefsKey.SHOW_TIPS), Map.entry("playcontinuously", PrefsKey.LOOP_PLAYBACK), Map.entry("control", PrefsKey.CONTROL), Map.entry("imageexportfilter", PrefsKey.IMAGE_EXPORT_FILTER), Map.entry("durationshortitude", PrefsKey.PLAYBACK_NOTE_DURATION), Map.entry("instrument", PrefsKey.INSTRUMENT), Map.entry("metric", PrefsKey.METRIC), Map.entry("firstrun", PrefsKey.FIRST_RUN));
     }
 
     private static final List<String> OBSOLETE_KEYS = List.of("colorizeNote", "defaultProfile");
